--- a/src/features/todos/components/NotebookTabs/NotebookTabs.module.scss
+++ b/src/features/todos/components/NotebookTabs/NotebookTabs.module.scss
@@ -11,6 +11,7 @@ $tab-height: 32px;
   overflow-x: auto;
   overflow-y: visible;
   padding: 0;
+  width: 100%;
   scrollbar-width: none;
 
   &::-webkit-scrollbar {
