--- a/src/shared/ui/Sidebar/Sidebar.module.scss
+++ b/src/shared/ui/Sidebar/Sidebar.module.scss
@@ -16,7 +16,7 @@
   overflow-y: auto;
   overscroll-behavior: contain;
 
-  @include md {
+  @include lg {
     display: flex;
   }
 }
